<resources>
    <string name="app_name">趣享GIF</string>
    <string name="world">世界</string>
    <string name="follow">关注</string>
    <string name="hot">热门</string>
    <string name="login_status_expired">登录状态已过期</string>
    <string name="unknown_error">发生未知错误</string>
    <string name="agree">同 意</string>
    <string name="send">发 送</string>
    <string name="gif_format_error">GIF图片格式不正确</string>
    <string name="no_more_content">没有更多内容了</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="give_up">舍弃</string>
    <string name="ignore">忽略</string>
    <string name="delete">删除</string>
    <string name="settings">设置</string>
    <string name="share">分享</string>
    <string name="report">举报</string>
    <string name="remind">提醒</string>
    <string name="forward">继续</string>
    <string name="draft_box">草稿箱</string>
    <string name="draft">草稿</string>
    <string name="search">搜索</string>
    <string name="take_photo">拍照</string>
    <string name="your_album">你的相册</string>
    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="currently_not_supported">该功能即将开放，敬请期待</string>
    <string name="delete_failed">删除失败</string>
    <string name="user_info_status_abnormal">当前登录状态存在异常</string>
    <string name="operation_failed_without_sdcard">您的手机没有SD卡，无法完成操作</string>
    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="network_response_code_error">服务器状态码异常：</string>
    <string name="bad_network_view_tip">您的网络不给力，点击屏幕可重新加载</string>
    <string name="load_failed_click_to_reload">加载失败，点击可重新加载</string>
    <string name="login">登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="guest_login">游客登录</string>
    <string name="compose">发布趣图</string>
    <string name="modify_profile">修改个人信息</string>
    <string name="user_home">个人主页</string>
    <string name="logout">注销</string>
    <string name="share_fun_with_world">乐趣就要和世界分享</string>
    <string name="register">注册</string>
    <string name="fetch_vcode">获取验证码</string>
    <string name="fun_is_coming">好玩的就要来了</string>
    <string name="select_nickname_please">请选择一个昵称</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_is_empty">手机号不能为空</string>
    <string name="phone_number_or_code_is_empty">手机号和验证码不能为空</string>
    <string name="phone_number_is_invalid">手机号格式不正确</string>
    <string name="sms_is_sent">已发送(%1$ds)</string>
    <string name="verify_code">验证码</string>
    <string name="description">个人简介</string>
    <string name="reg_code">注册码</string>
    <string name="move_on">继续</string>
    <string name="verify_failed">身份验证失败</string>
    <string name="login_canceled">登录取消</string>
    <string name="login_failed_response_is_null">登录失败，返回为空</string>
    <string name="login_failed_user_denied">登录失败，用户拒绝登录授权</string>
    <string name="login_failed_unknown_error">登录失败，出现未知错误</string>
    <string name="login_failed_token_or_openid_missing">无法获取到授权信息</string>
    <string name="register_failed_nickname_is_used">此昵称已被他人使用</string>
    <string name="register_failed">注册账号失败</string>
    <string name="reg_code_incorrect">注册码不正确</string>
    <string name="login_failed">登录失败</string>
    <string name="nickname_length_invalid">昵称长度太短</string>
    <string name="nickname_invalid">昵称只能包含中英文、数字、下划线、横线</string>
    <string name="get_baseinfo_failed">获取用户信息失败，请重新登录</string>
    <string name="get_baseinfo_failed_user_not_exist">获取用户信息失败，用户不存在</string>
    <string name="confirm_to_logout">您确定要退出当前账号吗？</string>
    <string name="open_id_or_access_token_is_null">账号授权状态不正确</string>
    <string name="phone_number_verify_code_is_null">短信验证状态不正确</string>
    <string name="fetch_data_failed">获取数据失败</string>
    <string name="your_following_feeds_is_empty">您的关注内容空空如也</string>
    <string name="go_to_follow">去关注</string>
    <string name="load_feed_failed">无法读取分享内容</string>
    <string name="fetch_feed_details_failed">获取详细信息失败</string>
    <string name="feed_is_deleted">该分享已被删除</string>
    <string name="hint_comment_reply">写评论</string>
    <string name="load_gif_failed">GIF加载失败，点击图片重新加载</string>
    <string name="load_image_failed">图片加载失败</string>
    <string name="your_draft_is_empty">您的草稿箱空空如也</string>
    <string name="save_to_draft_or_not">是否要保存到草稿箱？</string>
    <string name="save_to_draft_success">已保存至草稿箱</string>
    <string name="delete_draft_item">删除草稿</string>
    <string name="clean_draft_box">清空草稿箱</string>
    <string name="are_you_sure_to_clean_draft_box">确定要清空草稿箱吗？</string>
    <string name="you_are_playing_big_gif_with_roaming">您正在使用手机流量播放较大GIF图，是否继续？</string>
    <string name="forward_and_do_not_alert_again">继续并且不再提醒</string>
    <string name="favorite">点赞</string>
    <string name="number_likes">%1$s 赞</string>
    <string name="refeed">转发</string>
    <string name="comment">评论</string>
    <string name="follow_failed">关注失败</string>
    <string name="follow_too_many">您最多只能关注500名用户</string>
    <string name="follow_all_success">全部关注成功</string>
    <string name="unfollow_failed">取关失败</string>
    <string name="unfollow_confirm">您确定不再关注此用户吗？</string>
    <string name="delete_feed_confirm">您确定删除此条分享吗？</string>
    <string name="ref_feed_deleted">原分享已被删除</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="must_agree_permission_to_save">必须同意权限才能保存</string>
    <string name="save_failed">保存失败</string>
    <string name="save_gif_success">GIF图已保存到：\nsdcard/quxiang/趣享GIF/%1$s</string>
    <string name="save_gif_to_album_success">GIF图已保存到相册</string>
    <string name="save_gif_play_control_modify_or_not">是否保存对GIF播放控制的修改？</string>
    <string name="post_fun_pic">发布趣图</string>
    <string name="select_a_gif">请选择一张GIF图片</string>
    <string name="say_something">说点什么吧 &#8230;</string>
    <string name="posting">发布中</string>
    <string name="posting_please_wait">发布中，请稍后 &#8230;</string>
    <string name="uploading_gif">正在上传GIF图 %1$d%%</string>
    <string name="gif_album">GIF相册</string>
    <string name="gif_album_is_empty">您的GIF相册空空如也</string>
    <string name="giffun_need_access_storage">趣享GIF需要访问您的存储空间</string>
    <string name="allow_storage_permission_please">请在权限管理中允许存储空间权限</string>
    <string name="tip_long_press_to_preview">小提示：长按可预览GIF图</string>
    <string name="post">发布</string>
    <string name="repost">转发</string>
    <string name="post_success">发布成功</string>
    <string name="post_failed">发布失败：</string>
    <string name="repost_success">转发成功</string>
    <string name="repost_failed">转发失败：</string>
    <string name="field_missing">内容不完整</string>
    <string name="gif_larger_than_20_mb">分享的GIF图不能大于20M</string>
    <string name="gif_cover_is_unreachable">无法获取到GIF封面图</string>
    <string name="gif_width_or_height_invalid">GIF图的宽度或高度不正常</string>
    <string name="gif_is_too_wide_or_too_narrow">GIF图过宽或过窄，请重新选择</string>
    <string name="gif_md5_exception">无法计算GIF图的MD5值</string>
    <string name="user_feeds_count">发布 %1$s</string>
    <string name="user_followings_count">关注 %1$s</string>
    <string name="user_followers_count">粉丝 %1$s</string>
    <string name="user_separator">|</string>
    <string name="followings">关注</string>
    <string name="followers">粉丝</string>
    <string name="report_user">举报该用户</string>
    <string name="follow_user">关注该用户</string>
    <string name="unfollow_user">取关该用户</string>
    <string name="recommend_following">推荐关注</string>
    <string name="hot_users">热门趣友</string>
    <string name="follow_all">全部关注</string>
    <string name="no_more_recommend">没有更多推荐了</string>
    <string name="no_one_follows_him">还没有人关注TA</string>
    <string name="no_one_follows_you">还没有人关注您</string>
    <string name="he_follows_no_one">TA还没有关注任何人</string>
    <string name="you_follows_no_one">您还没有关注任何人</string>
    <string name="he_posts_nothing">TA还没有发布过任何内容</string>
    <string name="you_posts_nothing">您还没有发布过任何内容</string>
    <string name="user_does_not_feed_anything">这家伙很懒，什么都没有留下&#8230;</string>
    <string name="nickname_length_init">0/12</string>
    <string name="nickname_length_limit">%1$d/12</string>
    <string name="description_length_init">0/60</string>
    <string name="description_length_limit">%1$d/60</string>
    <string name="description_content">简介：%1$s</string>
    <string name="edit_description">编辑个人简介</string>
    <string name="select_avatar">选择头像照片</string>
    <string name="select_bg_image">选择个人封面照片</string>
    <string name="hold_on_for_saving">保存中，请稍后</string>
    <string name="save_success">保存成功</string>
    <string name="album_is_empty">您的相册空空如也</string>
    <string name="confirm_to_abort_userinfo_modification">您已修改了个人信息，确定放弃保存吗？</string>
    <string name="abort">放弃</string>
    <string name="title_gif_settings">GIF设置</string>
    <string name="key_gif_play_control">gif_play_control</string>
    <string name="title_gif_play_control">GIF播放控制</string>
    <string name="key_alert_for_big_gif">alert_for_big_gif</string>
    <string name="title_alert_when_play_big_gif_using_roaming">流量播放大图提醒</string>
    <string name="summary_alert_when_play_big_gif_using_roaming">使用手机流量播放较大GIF图时进行提醒</string>
    <string name="key_auto_refresh">auto_refresh</string>
    <string name="title_refresh_feeds_when_app_started">自动刷新内容</string>
    <string name="summary_refresh_feeds_when_app_started">打开应用后为您智能刷新最新的内容</string>
    <string name="title_general">常规</string>
    <string name="key_check_update">check_update</string>
    <string name="title_check_update">自动检查更新</string>
    <string name="summary_check_update">启动时自动检查是否有新版本</string>
    <string name="key_clean_cache">clean_cache</string>
    <string name="title_clean_cache">清理缓存</string>
    <string name="summary_clean_cache">清理应用内所有的图片缓存</string>
    <string name="key_app_info">app_info</string>
    <string name="title_app_info">应用信息</string>
    <string name="key_about">about</string>
    <string name="title_about">关于</string>
    <string name="key_user_terms">user_terms</string>
    <string name="title_user_terms">用户协议</string>
    <string name="title_logout">退出当前账号</string>
    <string name="key_logout">logout</string>
    <string name="key_loop_gif_play">loop_gif_play</string>
    <string name="title_loop_gif_play">循环播放GIF</string>
    <string name="summary_loop_gif_play">GIF图播放结束后自动重头播放</string>
    <string name="key_gif_play_speed">gif_play_speed</string>
    <string name="title_gif_play_speed">GIF播放速度</string>
    <string name="summary_gif_play_speed">选择GIF图的播放倍速</string>
    <string name="why_you_report_this_feed">你觉得这张趣图有什么问题？</string>
    <string name="why_you_report_this_comment">你觉得这条评论有什么问题？</string>
    <string name="why_you_report_this_user">你觉得这位用户有什么问题？</string>
    <string name="add_description_to_help_verify">为帮助审核人员更快处理，请补充详细说明</string>
    <string name="reason_porn">淫秽色情</string>
    <string name="reason_violence">血腥暴力</string>
    <string name="reason_reactionary">违法反动</string>
    <string name="reason_fraud">营销诈骗</string>
    <string name="reason_intellectual_property">侵犯产权</string>
    <string name="reason_other">其他原因</string>
    <string name="reason_icon">头像违规</string>
    <string name="reason_background">个人封面违规</string>
    <string name="reason_nickname">昵称违规</string>
    <string name="reason_description">个人简介违规</string>
    <string name="submit">提交</string>
    <string name="share_to">分享到</string>
    <string name="wechat">微信</string>
    <string name="wechat_memory">微信朋友圈</string>
    <string name="qq_friends">QQ</string>
    <string name="weibo">微博</string>
</resources>