<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/compose"
            android:icon="@drawable/ic_compose"
            android:title="@string/compose" />

        <item
            android:id="@+id/user_home"
            android:icon="@drawable/ic_user"
            android:title="@string/user_home" />

        <item
            android:id="@+id/recommend_following"
            android:icon="@drawable/ic_recommend"
            android:title="@string/recommend_following" />

        <item
            android:id="@+id/draft"
            android:icon="@drawable/ic_draft"
            android:title="@string/draft_box" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/none"
            android:title=""
            android:visible="false"/> <!-- 此项item用于实现让其他item在选择之后不保留选中状态 -->

    </group>

</menu>