<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/why_you_report_this_feed" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/split" />

        <RadioGroup
            android:id="@+id/reasonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/reasonPorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_porn" />

            <RadioButton
                android:id="@+id/reasonViolence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_violence" />

            <RadioButton
                android:id="@+id/reasonReactionary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_reactionary" />

            <RadioButton
                android:id="@+id/reasonFraud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_fraud" />

            <RadioButton
                android:id="@+id/reasonIntellectualProperty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_intellectual_property" />

            <RadioButton
                android:id="@+id/reasonOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_other" />

        </RadioGroup>

        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:background="#f4f4f4"
            android:gravity="start"
            android:hint="@string/add_description_to_help_verify"
            android:maxLength="300"
            android:padding="8dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textColor="@color/white_text"
            android:textSize="16sp"
            android:theme="@style/GifFun.MaterialButton" />

    </LinearLayout>

</ScrollView>