<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/why_you_report_this_user"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/split"
            />

        <RadioGroup
            android:id="@+id/reasonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/reasonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_icon"/>

            <RadioButton
                android:id="@+id/reasonBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_background"/>

            <RadioButton
                android:id="@+id/reasonNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_nickname"/>

            <RadioButton
                android:id="@+id/reasonDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_description"/>

            <RadioButton
                android:id="@+id/reasonOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reason_other"/>

        </RadioGroup>

        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:hint="@string/add_description_to_help_verify"
            android:gravity="start"
            android:textSize="14sp"
            android:maxLength="300"
            android:background="#f4f4f4"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textSize="16sp"
            android:textColor="@color/white_text"
            android:theme="@style/GifFun.MaterialButton"/>

    </LinearLayout>

</ScrollView>