<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/share_to"
        android:textColor="@color/secondary_text"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/shareToQQ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/share_to_qq"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/qq_friends"
            android:textColor="@color/text_primary_dark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareToWechatFriends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/share_to_wechat_friend"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/wechat"
            android:textColor="@color/text_primary_dark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareToWechatMemories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:foreground="?android:selectableItemBackground">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/share_to_wechat_memories"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/wechat_memory"
            android:textColor="@color/text_primary_dark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareToWeibo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/share_to_weibo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/weibo"
            android:textColor="@color/text_primary_dark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/saveToPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginBottom="@dimen/dp_10"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/save_to_phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/save_to_phone"
            android:textColor="@color/text_primary_dark"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>